src/styles/global.css
/** biome-ignore-all lint/suspicious/noUnknownAtRules: tailwindcss v4 directives */
@import "tailwindcss";
@plugin './hero.ts';

@source '../../node_modules/@heroui/theme/dist/**/*.{js,ts,jsx,tsx}';
@custom-variant dark (&:is(.dark *));

@theme {
  --font-sans: "Onest Variable", "sans-serif";
}

::-webkit-scrollbar {
  display: none;
}

@media (min-width: 1024px) {
  html {
    overflow-y: hidden;
  }
}

